test/testdata/packager/invalid_imports_and_exports/c/__package.rb
# frozen_string_literal: true
# typed: strict

class C < PackageSpec
end
